adding support page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <div class="button-group">
             <a href="privacy_policy.html" class="btn">Privacy Policy</a>
             <a href="terms_and_conditions.html" class="btn btn-secondary">Terms and Conditions</a>
+            <a href="support.html" class="btn" style="background-color: #00b894;">Support</a>
         </div>
     </div>
 </body>
