--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -125,6 +125,7 @@
         <p>If you have any questions about this Privacy Policy, please contact us:</p>
         <ul>
             <li>By email: <a href="mailto:Modernc12@gmail.com">Modernc12@gmail.com</a></li>
+            <li>By WhatsApp: <a href="https://wa.me/201024110164" target="_blank">+201024110164</a></li>
         </ul>
 
         <div class="footer">
