--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <a href="privacy_policy.html" class="btn">Privacy Policy</a>
             <a href="terms_and_conditions.html" class="btn btn-secondary">Terms and Conditions</a>
             <a href="support.html" class="btn" style="background-color: #00b894;">Support</a>
+            <a href="delete_account.html" class="btn" style="background-color: #d63031;">Delete Account</a>
         </div>
     </div>
 </body>
